[tool.poetry]
name = "underlordsgamedump"
version = "0.1.0"
description = ""
authors = ["Slavfox <slavfoxman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
pywin32 = "^306"
Pillow = "^10.0.0"
PyAutoGUI = "^0.9.54"
opencv-python = "^4.8.0"
openpyxl = "^3.1.2"
matplotlib = "^3.7.2"
numpy = "^1.25.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
